	* Add Fixed Point support and make it possible to switch from float
	and double to any fixed point variant supported by eina.

	Note: File saved with fixed point could be read by older version of
	eet library with EET_T_DOUBLE type.

2009-10-01  Mathieu Taillefumier

	* remove useless Eina_Log macros.

2009-10-01  Vincent Torri

	* Check the returned value of eet_init() in the binary.
	* Use binary mode of fopen() in eet_main() for Windows compatibility.

2009-10-09  Vincent Torri

	* initialize eina first in eet_init().

2009-11-02  Vincent Torri

	* allow generation of one single file with all source code in it.
	See configure help to enable it (--enable-amalgamation).

2009-11-11  Vincent Torri

	* Add check on libgcrypt library in configure. Needed when GNUtls
	support is enabled.

2009-12-02  Carsten Haitzler (The Rasterman)

        * Release eet 1.2.3

2009-12-03  Cedric BAIL

	* Make all operation on Eet_File thread safe.

2009-12-07  Cedric BAIL

	* Fix error when retrieving a different float type than the stored one.
	* Reduce convertion with a little memory overhead.

2009-12-07  Vincent Torri

	* Include winsock2.h in eet_image.c for htonl definition on Windows.
	* Fix Visual Studio project files

2009-12-11  Cedric BAIL

	* Make eet_data_descriptor_free safe to call on NULL pointer.

2009-12-21  Cedric BAIL

	* More work on eet_node dump code.

2009-12-28  Cedric BAIL

	* Add fully functionnal eet_node dump code.

2009-12-29  Cedric BAIL

	* Don't mess up when memory realloc failed during data descriptor creation.

2010-01-12  Cedric BAIL

	* Rewrite Eet_Data. Now you can do list/hash/array of strings and all
	the test suite is passing.
	* Add eet_data_node_decode_cipher and eet_data_node_read_cipher.

2010-01-15  Cedric BAIL

	* Fix amalgamation.

2010-01-16  Vincent Torri

	* eet_cipher.c: Fix arithmetic pointer on void *

2010-01-17  Cedric BAIL

	* Add a mempool for Eet_Node.

2010-01-21  Cedric BAIL

	* Add experimental API to walk Eet_Node tree.